[package]
name = "Pegboard"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
regex = "1.10"
rayon = "1.10"
colored = "3"

[[bin]]
name = "songsort"
path = "src/songsort.rs"

[[bin]]
name = "flac2mp3"
path = "src/flac2mp3.rs"

[[bin]]
name = "unbox"
path = "src/unbox.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
